<?xml version="1.0"?>
<package>
  <name>tiago_velodyne</name>
  <version>0.0.0</version>
  <description>TIAGo velodyne drivers and tf.</description>
  <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
