<?xml version="1.0"?>
<package>
  <name>tiago_scene_handler</name>
  <version>0.0.0</version>
  <description>TIAGo scene handler node.</description>
  <maintainer email="lcastri@lincoln.ac.uk">Luca Castri</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
